[package]
name = "visualisation"
version = "0.1.0"
edition = "2024"

[dependencies]
web-sys = {version = "0.3.77", features = ["CanvasRenderingContext2d", "HtmlCanvasElement", "HtmlImageElement", "Element", "HtmlElement", "DomRect", "Screen", "DomMatrix", "TouchEvent", "TouchList", "Touch"] }
yew = {version = "0.21.0", features = ["csr"] }
stylist = {version = "0.13", features = ["yew_integration"]}
wasm-bindgen = "0.2.100"
js-sys = "0.3.77"
yew_icons = {version = "0.8", features = ["BootstrapDiscord", "BootstrapGithub", "BootstrapZoomIn", "BootstrapZoomOut"]}
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"